bg ventas anuladas

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,6 +40,7 @@
   --detalle-arqueo: #555;
   --text-muted-custom: rgba(33, 37, 41, .75);
   --product-name-detalle-venta: #000000;
+  --bg-venta-anulada: #f2f2f2;
 }
 
 .dark-mode {
@@ -81,6 +82,7 @@
   --detalle-arqueo: #bebebe;
   --text-muted-custom: grey;
   --product-name-detalle-venta: #EDEDED;
+  --bg-venta-anulada: #2e2e42;
 }
 
 html, body {
