--- a/src/app/modules/venta/consultar-ventas/consultar-ventas.component.scss
+++ b/src/app/modules/venta/consultar-ventas/consultar-ventas.component.scss
@@ -27,7 +27,7 @@
 }
 
 .anulada-row {
-  background-color: #f2f2f2;
+  background-color: var(--bg-venta-anulada);
 }
 
 button[disabled] .facturar {
