--- a/src/app/modules/Estadisticas/visualizaciones-ventas/visualizaciones-ventas.component.html
+++ b/src/app/modules/Estadisticas/visualizaciones-ventas/visualizaciones-ventas.component.html
@@ -48,7 +48,7 @@
           </mat-form-field>
         </div>
       </div>
-      <div class="row">
+      <div class="row pt-4">
         <div class="col-md-3">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Empleado</mat-label>
