--- a/src/app/modules/proveedores/registrar-proveedor/registrar-proveedor.component.html
+++ b/src/app/modules/proveedores/registrar-proveedor/registrar-proveedor.component.html
@@ -10,9 +10,12 @@
       </div>
     </div>
 
-    <br>
-
     <form [formGroup]="form">
+
+      <br>
+      <h3>Datos generales:</h3>
+      <mat-divider></mat-divider>
+
       <div class="row pt-4">
         <div class="col-md-4">
           <mat-form-field appearance="outline" class="w-100">
@@ -56,6 +59,8 @@
       </div>
 
       <br>
+      <h3>Domicilio:</h3>
+      <mat-divider></mat-divider>
 
       <div class="row pt-4">
         <div class="col-md-3">
