--- a/src/app/modules/empleados/marcar-asistencia/marcar-asistencia.component.scss
+++ b/src/app/modules/empleados/marcar-asistencia/marcar-asistencia.component.scss
@@ -95,3 +95,14 @@ button.button-logout[disabled] {
   cursor: not-allowed;
   pointer-events: none;
 }
+
+.custom-date-color {
+  color: var(--custom-date-color) !important;
+  display: block;
+  font-size: 1.5em;
+  margin-top: 0.83em;
+  margin-bottom: 0.83em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
+}
