fix: color titulo de resumen arqueo

--- a/src/app/modules/gerencia/detalle-arqueo/detalle-arqueo.component.scss
+++ b/src/app/modules/gerencia/detalle-arqueo/detalle-arqueo.component.scss
@@ -121,7 +121,7 @@
 .diferencia-title {
   font-size: 1.5rem;
   font-weight: bold;
-  color: #333;
+  color: var(--diferencia-title-color) !important;
   margin: 0;
 }
 
