--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,6 +43,7 @@
   --product-name-detalle-venta: #000000;
   --bg-venta-anulada: #f2f2f2;
   --mat-select-disabled-text-color: rgba(0, 0, 0, 0.38);
+  --diferencia-title-color: #333;
 }
 
 .dark-mode {
@@ -87,6 +88,7 @@
   --product-name-detalle-venta: #EDEDED;
   --bg-venta-anulada: #2e2e42;
   --mat-select-disabled-text-color: rgba(255, 255, 255, 0.38);
+  --diferencia-title-color: #EDEDED;
 }
 
 .mdc-text-field--outlined.mdc-text-field--disabled .mdc-text-field__input {
