Cambios en el sidebar de analisis de datos y correcciones de estadisticas de compra

--- a/src/app/modules/Estadisticas/visualizaciones/visualizaciones.component.html
+++ b/src/app/modules/Estadisticas/visualizaciones/visualizaciones.component.html
@@ -4,7 +4,7 @@
     <div class="col-md-6 mb-4">
       <div class="card-link" (click)="navigateTo('visualizaciones-ventas')">
         <div class="metric-box">
-          <h3>Gráficos de Ventas</h3>
+          <h3>Estadisticas de Venta</h3>
           <p>Explora las estadísticas de ventas</p>
         </div>
       </div>
@@ -13,7 +13,7 @@
     <div class="col-md-6 mb-4">
       <div class="card-link" (click)="navigateTo('visualizaciones-compras')" >
         <div class="metric-box">
-          <h3>Gráficos de Compras</h3>
+          <h3>Estadísticas de Compra</h3>
           <p>Explora las estadísticas de compras</p>
         </div>
       </div>
