fix: revertir estilo summary venta

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,6 +44,7 @@
   --bg-venta-anulada: #f2f2f2;
   --mat-select-disabled-text-color: rgba(0, 0, 0, 0.38);
   --diferencia-title-color: #333;
+  --bg-summary-venta: #f8fafc;
 }
 
 .dark-mode {
@@ -89,6 +90,7 @@
   --bg-venta-anulada: #2e2e42;
   --mat-select-disabled-text-color: rgba(255, 255, 255, 0.38);
   --diferencia-title-color: #EDEDED;
+  --bg-summary-venta: #3E3E4E;
 }
 
 .mdc-text-field--outlined.mdc-text-field--disabled .mdc-text-field__input {
