--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.scss
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.scss
@@ -141,10 +141,9 @@
 
 
 .summary-container {
-  background-color: var(--bg-card); /* Color de fondo similar al de la imagen */
+  background-color: var(--bg-summary-venta); /* Color de fondo similar al de la imagen */
   padding: 15px; /* Espaciado interno */
   border-radius: 5px; /* Bordes redondeados */
-  border: 1px solid grey;
 }
 .dotted-line {
   border-top: 1px dotted #ccc; /* Línea punteada */
