--- a/src/app/modules/home/asistencias-empleados/asistencias-empleados.component.html
+++ b/src/app/modules/home/asistencias-empleados/asistencias-empleados.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <div class="col p-1">
     <div class="row">
-      <h2>Asistencias de hoy</h2>
+      <h2>Asistencia de empleados</h2>
     </div>
 
     <div class="spinner-wrapper" *ngIf="buscando">
