--- a/src/app/modules/home/ordenes-de-compra/ordenes-de-compra.component.html
+++ b/src/app/modules/home/ordenes-de-compra/ordenes-de-compra.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <div class="col p-1">
     <div class="row">
-      <h2>Últimas ordenes de compras</h2>
+      <h2>Últimas órdenes de compra</h2>
     </div>
 
     <div class="spinner-wrapper" *ngIf="buscando">
