--- a/src/app/modules/home/ventas-dia/ventas-dia.component.html
+++ b/src/app/modules/home/ventas-dia/ventas-dia.component.html
@@ -9,10 +9,11 @@
     </div>
 
     <div class="row align-items-start" *ngIf="!buscando && ventas.length > 0">
-      <div class="col-3 mt-2">
+      <div class="col-4 mt-2" style="margin-right: -30px">
         <div class="d-flex align-items-center">
           <div class="color-indicator today"></div>
           <h3 class="ms-2">Hoy</h3>
+          <h3 class="ms-2 fecha">{{fechaHoy}}</h3>
         </div>
         <div class="d-flex align-items-baseline">
           <p class="currency-symbol">$</p>
@@ -22,6 +23,7 @@
         <div class="d-flex align-items-center mt-2">
           <div class="color-indicator yesterday"></div>
           <h3 class="ms-2">Ayer</h3>
+          <h3 class="ms-2 fecha">{{fechaAyer | date: 'dd/MM/yyyy'}}</h3>
         </div>
         <div class="d-flex align-items-baseline">
           <p class="currency-symbol">$</p>
