--- a/src/app/modules/home/ventas-dia/ventas-dia.component.scss
+++ b/src/app/modules/home/ventas-dia/ventas-dia.component.scss
@@ -13,7 +13,7 @@ h2 {
 }
 
 h1 {
-  font-weight: bold;
+  font-weight: 500;
   font-size: 18px;
   margin: 0;
   color: var(--color-text-title);
@@ -21,13 +21,14 @@ h1 {
 
 h3 {
   font-size: 14px;
-  font-weight: normal;
+  font-weight: 400;
   margin: 0;
   color: var(--color-text-title);
 }
 
 .fecha {
   font-size: 10px;
+  font-weight: 500;
 }
 
 .currency-symbol {
