fix: validadores de fecha

--- a/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
+++ b/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
@@ -52,7 +52,7 @@
         <div class="col-md-3">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Fecha Desde</mat-label>
-            <input matInput [matDatepicker]="pickerDesde" [formControl]="txFechaDesde" />
+            <input matInput [matDatepicker]="pickerDesde" [formControl]="txFechaDesde" [max]="maxDate"/>
             <mat-datepicker-toggle matSuffix [for]="pickerDesde"></mat-datepicker-toggle>
             <mat-datepicker #pickerDesde></mat-datepicker>
           </mat-form-field>
@@ -61,7 +61,7 @@
         <div class="col-md-3">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Fecha Hasta</mat-label>
-            <input matInput [matDatepicker]="pickerHasta" [formControl]="txFechaHasta" />
+            <input matInput [matDatepicker]="pickerHasta" [formControl]="txFechaHasta" [max]="maxDate" [min]="txFechaDesde.value"/>
             <mat-datepicker-toggle matSuffix [for]="pickerHasta"></mat-datepicker-toggle>
             <mat-datepicker #pickerHasta></mat-datepicker>
           </mat-form-field>
