fix: color input

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,8 +28,8 @@
   --mdc-outlined-text-field-disabled-label-text-color: rgba(0, 0, 0, 0.38);
   --mdc-outlined-text-field-disabled-input-text-color: rgba(0, 0, 0, 0.38);
   --mdc-outlined-text-field-hover-outline-color: rgba(0, 0, 0, .6);
-  --mdc-outlined-text-field-focus-outline-color: #e15b35;
-  --mdc-outlined-text-field-focus-label-text-color: #e15b35;
+  --mdc-outlined-text-field-focus-outline-color: #3f51b4;
+  --mdc-outlined-text-field-focus-label-text-color: #3f51b4;
   --mdc-outlined-text-field-label-text-color: rgba(0, 0, 0, .6);
   --mdc-outlined-text-field-hover-label-text-color: rgba(0, 0, 0, .6);
   --btn-border-registrar: 1px solid #e15b35;
@@ -75,8 +75,8 @@
   --mdc-outlined-text-field-disabled-label-text-color: rgba(53, 53, 63, 0.98);
   --mdc-outlined-text-field-disabled-input-text-color: rgba(255, 255, 255, 0.38);
   --mdc-outlined-text-field-hover-outline-color: #fafafa;
-  --mdc-outlined-text-field-focus-outline-color: #e15b35;
-  --mdc-outlined-text-field-focus-label-text-color: #e15b35;
+  --mdc-outlined-text-field-focus-outline-color: #3f51b4;
+  --mdc-outlined-text-field-focus-label-text-color: #3f51b4;
   --mdc-outlined-text-field-label-text-color: #EDEDED;
   --mdc-outlined-text-field-hover-label-text-color: #8c8c8c;
   --btn-border-registrar: 1px solid #e15b35;
