fix: filtros fechas en compras

--- a/src/app/modules/Estadisticas/visualizaciones-compras/visualizaciones-compras.component.html
+++ b/src/app/modules/Estadisticas/visualizaciones-compras/visualizaciones-compras.component.html
@@ -13,7 +13,7 @@
     <form [formGroup]="filtersForm" class="filters-row mt-3">
       <div class="filter-item">
         <mat-form-field appearance="outline">
-          <mat-label>Fecha Inicio</mat-label>
+          <mat-label>Fecha Desde</mat-label>
           <input matInput [matDatepicker]="pickerInicio" formControlName="start_date" [max]="maxDate"/>
           <mat-datepicker-toggle matSuffix [for]="pickerInicio"></mat-datepicker-toggle>
           <mat-datepicker #pickerInicio></mat-datepicker>
@@ -22,7 +22,7 @@
 
       <div class="filter-item">
         <mat-form-field appearance="outline">
-          <mat-label>Fecha Fin</mat-label>
+          <mat-label>Fecha Hasta</mat-label>
           <input matInput [matDatepicker]="pickerFin" formControlName="end_date" [max]="maxDate" [min]="txFechaDesde.value"/>
           <mat-datepicker-toggle matSuffix [for]="pickerFin"></mat-datepicker-toggle>
           <mat-datepicker #pickerFin></mat-datepicker>
