--- a/src/app/modules/tarjetas/registrar-tarjeta/registrar-tarjeta.component.html
+++ b/src/app/modules/tarjetas/registrar-tarjeta/registrar-tarjeta.component.html
@@ -25,7 +25,7 @@
 
         <div class="col-md-3">
           <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Tipo de Tarjeta</mat-label>
+            <mat-label>Tipo de tarjeta</mat-label>
             <mat-select [formControl]="txTipoTarjeta">
               <mat-option *ngFor="let tipoTarjeta of listaTiposTarjetas" [value]="tipoTarjeta.id">
                 {{ tipoTarjeta.nombre }}
