feat: se agregaron filtros

--- a/src/app/modules/Estadisticas/visualizaciones-compras/visualizaciones-compras.component.html
+++ b/src/app/modules/Estadisticas/visualizaciones-compras/visualizaciones-compras.component.html
@@ -12,7 +12,7 @@
       <form [formGroup]="filtersForm" class="filters-row mt-3">
         <div class="filter-item">
           <mat-form-field appearance="outline">
-            <mat-label>Fecha Inicio</mat-label>
+            <mat-label>Fecha Desde</mat-label>
             <input matInput [matDatepicker]="pickerInicio" formControlName="start_date" />
             <mat-datepicker-toggle matSuffix [for]="pickerInicio"></mat-datepicker-toggle>
             <mat-datepicker #pickerInicio></mat-datepicker>
@@ -21,10 +21,44 @@
   
         <div class="filter-item">
           <mat-form-field appearance="outline">
-            <mat-label>Fecha Fin</mat-label>
+            <mat-label>Fecha Hasta</mat-label>
             <input matInput [matDatepicker]="pickerFin" formControlName="end_date" />
             <mat-datepicker-toggle matSuffix [for]="pickerFin"></mat-datepicker-toggle>
             <mat-datepicker #pickerFin></mat-datepicker>
+          </mat-form-field>
+        </div>
+
+        <div class="filter-item">
+          <mat-form-field appearance="outline">
+            <mat-label>Proveedor</mat-label>
+            <mat-select formControlName="proveedor">
+              <mat-option *ngFor="let proveedor of proveedoresArray" [value]="proveedor.id">
+                {{ proveedor.nombre }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        
+
+        <div class="filter-item">
+          <mat-form-field appearance="outline">
+            <mat-label>Producto</mat-label>
+            <mat-select formControlName="producto">
+              <mat-option *ngFor="let producto of productosArray" [value]="producto.id">
+                {{ producto.nombre }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+
+        <div class="filter-item">
+          <mat-form-field appearance="outline">
+            <mat-label>Tipo de Producto</mat-label>
+            <mat-select formControlName="tipo_producto"> <!-- Agregado formControlName -->
+              <mat-option *ngFor="let tipoProducto of tiposProductoArray" [value]="tipoProducto.id">
+                {{ tipoProducto.nombre }}
+              </mat-option>
+            </mat-select>
           </mat-form-field>
         </div>
       </form>
@@ -43,25 +77,25 @@
     <div class="row mt-4">
       <div class="col-md-6 mb-4">
         <div class="chart-card">
-          <h3 class="chart-title"><span class="icon">📊</span> Gastos Totales por Producto</h3>
+          <h3 class="chart-title"><span class="icon">📊</span> Compras Totales por Producto</h3>
           <iframe [src]="grafanaUrls.gastosPorProducto" class="chart-frame"></iframe>
         </div>
       </div>
       <div class="col-md-6 mb-4">
         <div class="chart-card">
-          <h3 class="chart-title"><span class="icon">📈</span> Gastos Totales por Tipo de Producto</h3>
+          <h3 class="chart-title"><span class="icon">📈</span> Compras Totales por Tipo de Producto</h3>
           <iframe [src]="grafanaUrls.gastosPorTipoProducto" class="chart-frame"></iframe>
         </div>
       </div>
       <div class="col-md-6 mb-4">
         <div class="chart-card">
-          <h3 class="chart-title"><span class="icon">🕒</span> Compras por Fecha y Hora</h3>
+          <h3 class="chart-title"><span class="icon">🕒</span> Compras totales por Día</h3>
           <iframe [src]="grafanaUrls.comprasPorFechaHora" class="chart-frame"></iframe>
         </div>
       </div>  
       <div class="col-md-6 mb-4">
         <div class="chart-card">
-          <h3 class="chart-title"><span class="icon">📋</span> Compras por Proveedor</h3>
+          <h3 class="chart-title"><span class="icon">📋</span> Compras por Proveedores</h3>
           <iframe [src]="grafanaUrls.comprasPorProveedor" class="chart-frame"></iframe>
         </div>
       </div>  
